--- a/main.first_roll.css
+++ b/main.first_roll.css
@@ -2,6 +2,12 @@ body {
     background-color: #2F4F4F;
     color: #fff;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 
@@ -11,8 +17,12 @@ div.newgame.container.sixteen-columns {
 .single-die {
     border-top: 1px solid #fff;
     height: auto;
-    padding:20px;
-    width: auto;
+    width: 100%;
+}
+
+.die-wrap {
+    display:block;
+    margin-left: -100px;
 }
 
 .single-die p {
@@ -43,9 +53,11 @@ div.newgame.container.sixteen-columns {
     box-shadow:none;
     background-color: #f00;
     color:#fff;
-    font-size: 2em;
+    font-size: 1em;
+    padding:20px;
     height: 100%;
-    width: 10%;
+    width: auto;
+    text-align:right;
 }
 
 .single-die select {
