--- a/main.first_roll.css
+++ b/main.first_roll.css
@@ -8,69 +8,43 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    overflow-x:hidden;
 }
 
 
 div.newgame.container.sixteen-columns {
     padding-top: 50px;
 }
-.single-die {
-    border-top: 1px solid #fff;
-    height: auto;
-    width: 100%;
-}
+.single-die{border-top:1px solid #fff;height:63px;width:100%;}
+.single-die:nth-child(even){background-color:rgba(255,255,255,0.3);}
+.single-die:last-child{border-bottom:1px solid #fff;}
+.delete-die,.sides,.side-selector,.result{float:left;}
+.roll {float:right}
+
+.delete-die{border-color:none;border:0px;border:none;border-image-width:0;box-shadow:none;background-color:#f00;color:#fff;font-size:1em;padding:20px 10px;height:auto;width:50%;text-align:left;}
+.roll{border-color:none;border:0px;border:none;border-image-width:0;box-shadow:none;background-color:#0f0;color:#fff;font-size:1em;padding:20px 10px;height:auto;width:50%;text-align:right;}
+.delete-roll {margin-top:-65px;}
 
 .die-wrap {
+    background-color:#444;
     display:block;
-    margin-left: -100px;
-}
-
-.single-die p {
-    display:inline-block;
-}
-
-.single-die:nth-child(even) {
-    background-color: rgba(255,255,255,0.3);
-}
-.single-die:last-child {
-    border-bottom: 1px solid #fff;
-}
-
-
-.delete-die, .sides, .side-selector, .result, .roll {
-    float: left;
-}
-
-.roll {
-    float: right;
-}
-
-.delete-die {
-    border-color:none;
-    border:0px;
-    border:none;
-    border-image-width:0;
-    box-shadow:none;
-    background-color: #f00;
-    color:#fff;
-    font-size: 1em;
-    padding:20px;
-    height: 100%;
-    width: auto;
-    text-align:right;
+    height:100%;
+    position:relative;
+    width:100%;
+    overflow:hidden;
+    z-index:10000;
 }
 
 .single-die select {
    background: transparent;
    color: #fff;
    width: 10%;
-   padding-top: 10px;
-   padding-left: 15px;
+   padding: 20px;
    font-size: 1.5em;
    line-height: 1;
    border: 0;
    border-radius: 0;
-   height: 34px;
+   height: auto;
    -webkit-appearance: none;
    text-align:center;
 }
@@ -78,13 +52,13 @@ div.newgame.container.sixteen-columns {
 .sides {
    background: transparent;
    color: #fff;
-   width: 40%;
-   padding-top: 10px;
+   width: 30%;
+   padding: 20px;
    font-size: 1.5em;
    line-height: 1;
    border: 0;
    border-radius: 0;
-   height: 34px;
+   height: auto;
    -webkit-appearance: none;
    text-align:center;
 }
@@ -92,30 +66,18 @@ div.newgame.container.sixteen-columns {
 .result {
    background: transparent;
    color: #fff;
-   width: 25%;
-   padding-top: 10px;
-   padding-left: 15px;
+   width: 40%;
+   padding: 20px;
    font-size: 1.5em;
    line-height: 1;
    border: 0;
    border-radius: 0;
-   height: 34px;
+   height: auto;
    -webkit-appearance: none;
    text-align:center;
 }
 
-.roll {
-    border-color:none;
-    border:0px;
-    border:none;
-    border-image-width:0;
-    box-shadow:none;
-    background-color: #0f0;
-    color:#fff;
-    font-size: 2em;
-    height: 100%;
-    width: 10%;
-}
+
 
 .d2 {}
 .d3 {}
