--- a/public/die.css
+++ b/public/die.css
@@ -1,7 +1,7 @@
 body {
     background-color: #2F4F4F;
     color: #fff;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -92,40 +92,45 @@ select:focus {
    text-align:center;
 }
 
-.result p {
+.result div {
+    position:relative;
     width: 50px;
     margin: 0 auto;
     padding-top:10px;
 }
 
-.result p.d2{width:45px;height:35px;background:#cccccc;-moz-border-radius:25px;-webkit-border-radius:25px;border-radius:25px;}
-.d3  {}
-.d4  {}
-.d5  {}
-.d6  {}
-.d7  {}
-.d8  {}
-.d9  {}
-.d10 {}
-.d11 {}
-.d12 {}
-.d13 {}
-.d14 {}
-.d15 {}
-.d16 {}
-.d17 {}
-.d18 {}
-.d19 {}
-.d20 {}
-.d21 {}
-.d22 {}
-.d23 {}
-.d24 {}
-.d25 {}
-.d26 {}
-.d27 {}
-.d28 {}
-.d29 {}
+.result p {margin:0 auto;}
+
+.result div.d2  {width:45px;height:35px;background:#cccccc;-moz-border-radius:25px;-webkit-border-radius:25px;border-radius:25px;}
+.result div.d3  {width:61px;height:30px;background:#f1f1f1;color:#333333;-moz-border-radius:52px / 37px;-webkit-border-radius:52px / 37px;border-radius:52px / 37px;padding-bottom:3px;}
+.result div.d4  {width:0;height:auto;background:#f1f1f1;border-left:22px solid #2F4F4F;border-right:22px solid #2F4F4F;border-bottom:44px solid red;margin-top:-10px}
+.result div.d4 p {position:absolute;margin-top:15px;margin-left:-8px}
+.result div.d5  {width:25px;height:35px;background:#f1f1f1;color:#333333;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;}
+.result div.d6  {width:45px;height:35px;background:#f1f1f1;color:#333333;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;}
+.result div.d7  {}
+.result div.d8  {}
+.result div.d9  {}
+.result div.d10  {width:0;height:auto;background:#f1f1f1;border-left:20px solid #2F4F4F;border-right:20px solid #2F4F4F;border-bottom:44px solid red;margin-top:-10px}
+.result div.d10 p {position:absolute;margin-top:15px;margin-left:-8px}
+.result div.d11 {}
+.result div.d12 {}
+.result div.d13 {}
+.result div.d14 {}
+.result div.d15 {}
+.result div.d16 {}
+.result div.d17 {}
+.result div.d18 {}
+.result div.d19 {}
+.result div.d20 {}
+.result div.d21 {}
+.result div.d22 {}
+.result div.d23 {}
+.result div.d24 {}
+.result div.d25 {}
+.result div.d26 {}
+.result div.d27 {}
+.result div.d28 {}
+.result div.d29 {}
     
 footer {position:fixed; bottom:5px;left:5px}
 }
