--- a/main.first_roll.css
+++ b/main.first_roll.css
@@ -37,7 +37,7 @@ input[type='submit'], input[type='button'] {
     outline: 0;
     padding: 0 10px;
     line-height:60px;
-    height: auto;
+    height:60px;
 }
 
 input, input[type="password"], input[type="search"], isindex {
@@ -95,6 +95,7 @@ header a {
     float:left;
     font-size: 150%;
     line-height:60px;
+    height:60px;
     text-align: center;
 }
     
@@ -103,7 +104,6 @@ header a {
     -webkit-box-sizing: border-box; 
     box-sizing: border-box;
     border:0;
-    height:auto;
     line-height:60px;
     margin:0;
     padding-left: 10%;
@@ -111,7 +111,6 @@ header a {
 }
 
 input.enter-game {
-    height:auto;
     margin:0;
     text-align: center;
     width:10%;
@@ -233,6 +232,8 @@ div.delete-roll input.roll {
     border-radius: 0;
     height: auto;
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     text-align: right;
 }
 .single-die select {
@@ -240,13 +241,18 @@ div.delete-roll input.roll {
     color: #fff;
     margin: 0;
     width: auto;
+    overflow:hidden;
     padding-left:10px;
     line-height: 60px;
     font-size: 150%;
     border: 0;
     border-radius: 0;
-    height: auto;
+    height: 60px;
+    appearance:none;
+    -moz-appearance: none;
     -webkit-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
     text-align: center;
 }
 select:focus {
